feat: add API documentation to homepage and configure dev/prod .env environments

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -40,9 +40,7 @@ $RECYCLE.BIN/
 # Environment Files
 #-------------------------
 # These should never be under version control,
-# as it poses a security risk.
-.env
-env.*
+# as it poses a security risk.x
 .vagrant
 Vagrantfile
 
